--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "mongoose": "^8.4.1"
+    "dotenv": "^16.4.5",
+    "mongodb": "^6.7.0"
   }
 }
