--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "ts-web-framework",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
+  "source": "/src",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx parcel index.html"
   },
   "keywords": [
     "web-framework",
@@ -20,5 +22,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "mongodb": "^6.7.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.8"
   }
 }
